can get post request from index.html

--- a/src/http/index.html
+++ b/src/http/index.html
@@ -34,7 +34,7 @@
         <img src="https://media.giphy.com/media/3o7aDcz6Y0fzWYvU5G/giphy.gif" alt="Twerk" width="300" height="300">
         <p>Code 'n Twerk: Webserver Work</p>
         <button type="button" class="buttonCustom" onclick="window.location.href='#';">Stress test</button>
-        <form action="/action_page.php">
+        <form action="/" method="POST">
             <input type="file" id="myFile" name="filename">
             <input type="submit">
         </form>
