--- a/src/http/index.html
+++ b/src/http/index.html
@@ -32,7 +32,7 @@
     <div class="content">
         <h1>Webserv</h1>
         <!-- <img src="https://media.giphy.com/media/3o7aDcz6Y0fzWYvU5G/giphy.gif" alt="Twerk" width="300" height="300"> -->
-        <img src="/uploads/dagmaras.jpeg" alt="Twerk" width="300" height="300">
+        <img src="https://media.giphy.com/media/3o7aDcz6Y0fzWYvU5G/giphy.gif" alt="Twerk" width="300" height="300">
 
         <p>Code 'n Twerk: Webserver Work</p>
         <button type="button" class="buttonCustom" onclick="window.location.href='#';">Stress test</button>
