--- a/src/http/directory.html
+++ b/src/http/directory.html
@@ -10,7 +10,7 @@
     <script>
         // Function to fetch and list files in the current directory
         function listFiles() {
-            fetch('./')
+            fetch('../')
                 .then(response => response.text())
                 .then(data => {
                     const parser = new DOMParser();
