redirect partially added

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 
@@ -60,8 +60,7 @@
                 <button type="button" class="buttonCustom" onclick="window.location.href='#';">Run</button>
             </div>
         </div>
-    
-        </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
