error fixed POST requests

--- a/src/http/index.html
+++ b/src/http/index.html
@@ -60,7 +60,7 @@
         <div class="functionbox">
             <p class = "titlebox">Test :</br>Upload file (POST) (NWY)</p>
             <p class ="textbox">Expected behaviour:</br>File gets succesfully uploaded to server</p>
-            <form method="post" action="/" enctype="multipart/form-data">
+            <form method="post" action="/upload.py" enctype="multipart/form-data">
                 <div>
                   <label for="file">Choose a file</br></label>
                   <input type="file" id="file" name="myFile" style="margin-bottom:10px;margin-top:10px;"/>
