--- a/src/http/index.html
+++ b/src/http/index.html
@@ -74,7 +74,7 @@
         <div class="functionbox">
             <p class = "titlebox">Test :</br> Show Files (NWY)</p>
             <p class ="textbox">Expected behaviour:</br>Shows page with files in current directory</p>
-            <button type="button" class="buttonCustom" onclick="window.location.href='#';">Run</button>
+            <button type="button" class="buttonCustom" onclick="window.location.href='/src/http';">Run</button>
         </div>
 
         <div class="functionbox">
