almost all tests fixed

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
             <div class="functionbox">
                 <p class = "titlebox">Test :</br>Show environment variables (NWY)</p>
                 <p class ="textbox">Expected behaviour:</br>Running the env.py script shows all the environment variables</p>
-                <button type="button" class="buttonCustom" onclick="window.location.href='#';">Run</button>
+                <button type="button" class="buttonCustom" onclick="window.location.href='/cgi-bin/env.py';">Run</button>
             </div>
 
             <div class="functionbox">
