upload directory and directory listing fixed

--- a/html/index.html
+++ b/html/index.html
@@ -46,12 +46,6 @@
                 <p class ="textbox">Expected behaviour:</br>Opens a new page (page1.html)</p>
                 <button type="button" class="buttonCustom" onclick="window.location.href='/html/page1.html';">Run</button>
             </div>
-
-            <div class="functionbox">
-                <p class = "titlebox">Test :</br>New Page 2 (NWY)</p>
-                <p class ="textbox">Expected behaviour:</br>Opens a new page (page2.html)</p>
-                <button type="button" class="buttonCustom" onclick="window.location.href='/html/page2.html';">Run</button>
-            </div>
 <!-- 
             <div class="functionbox">
                 <p class = "titlebox">Test :</br>Basic Form (NWY)</p>
@@ -76,7 +70,7 @@
             <div class="functionbox">
                 <p class = "titlebox">Test :</br> Show Files (NWY)</p>
                 <p class ="textbox">Expected behaviour:</br>Shows page with files in current directory</p>
-                <button type="button" class="buttonCustom" onclick="window.location.href='/src/http';">Run</button>
+                <button type="button" class="buttonCustom" onclick="window.location.href='/testdir';">Run</button>
             </div>
 
             <div class="functionbox">
