--- a/html/index.html
+++ b/html/index.html
@@ -46,12 +46,6 @@
                 <p class ="textbox">Expected behaviour:</br>Opens a new page (page1.html)</p>
                 <button type="button" class="buttonCustom" onclick="window.location.href='/html/page1.html';">Run</button>
             </div>
-<!-- 
-            <div class="functionbox">
-                <p class = "titlebox">Test :</br>Basic Form (NWY)</p>
-                <p class ="textbox">Expected behaviour:</br>Opens a new page (page2.html)</p>
-                <button type="button" class="buttonCustom" onclick="window.location.href='/html/page2.html';">Run</button>
-            </div> -->
 
             <div class="functionbox">
                 <p class = "titlebox">Test :</br>Upload file (POST) (NWY)</p>
@@ -82,13 +76,13 @@
             <div class="functionbox">
                 <p class = "titlebox">Test :</br> Sleeping CGI (NWY)</p>
                 <p class ="textbox">Expected behaviour:</br>CGI Sleeps for certain amount of time</p>
-                <button type="button" class="buttonCustom" onclick="window.location.href='#';">Run</button>
+                <button type="button" class="buttonCustom" onclick="window.location.href='/cgi-bin/sleep.py';">Run</button>
             </div>
 
             <div class="functionbox">
                 <p class = "titlebox">Test :</br> CGI No Rights (NWY)</p>
                 <p class ="textbox">Expected behaviour:</br>Tries running a cgi that doesn't have exec rights</p>
-                <button type="button" class="buttonCustom" onclick="window.location.href='#';">Run</button>
+                <button type="button" class="buttonCustom" onclick="window.location.href='/cgi-bin/noexec.py';">Run</button>
             </div>
 
             <div class="functionbox">
